# qfengine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  build.unix.generic.sh  build.windows.x32.bat  build.windows.x64.bat  gameinfo.toml  gameinfo.yml  package.unix.generic.sh  package.windows.x32.bat  package.windows.x64.bat
baseqf/: user.conf
cmake/: QFengineModules.cmake  QFengineProjects.cmake
common/: CMakeLists.txt  commandline.cc  commandline.hh  enginemodule.cc  enginemodule.hh  module.cc  module.hh  pch.hh  plugin.cc  plugin.hh  threading.cc  threading.hh
common/config/: boolean.cc  boolean.hh  map.cc  map.hh  number.hh  string.cc  string.hh  value.hh
common/debug/: assert.hh
common/mixin/: nocopy.hh  nomove.hh
common/resource/: image.cc  image.hh
common/utils/: crc64.cc  crc64.hh  epoch.cc  epoch.hh  physfs.cc  physfs.hh  string.cc  string.hh
game/client/: CMakeLists.txt  clientmodule.cc  clientmodule.hh  game.cc  game.hh  globals.cc  globals.hh  main.cc  main.hh  pch.hh  render.hh
game/client/render/: render.cc  render.hh
game/server/: CMakeLists.txt  pch.hh  servermodule.cc  servermodule.hh
game/shared/: CMakeLists.txt  game.cc  game.hh  gameinfo.cc  gameinfo.hh  globals.cc  globals.hh  pch.hh  sharedmodule.cc  sharedmodule.hh
launch/: CMakeLists.txt  launch.cc  launch.hh  main_generic.cc  main_win32.cc  pch.hh
media/: qf.xcf
modules/: CMakeLists.txt  client_modules.hh  server_modules.hh  shared_modules.hh
modules/client/: CMakeLists.txt
modules/client/example/: CMakeLists.txt  example_client.cc
modules/client/perflog/: CMakeLists.txt  perflog_client.cc
modules/qfortress/: CMakeLists.txt  client_module.cc  client_pch.hh
modules/server/: CMakeLists.txt
modules/server/example/: CMakeLists.txt  example_server.cc
modules/shared/: CMakeLists.txt
modules/shared/example/: CMakeLists.txt  example_shared.cc
modules/templates/: client_modules.cc.in  server_modules.cc.in  shared_modules.cc.in
plugins/: CMakeLists.txt  client_plugins.hh  server_plugins.hh  shared_plugins.hh
plugins/client/: CMakeLists.txt
plugins/client/example/: CMakeLists.txt  example_client.cc
plugins/server/: CMakeLists.txt
plugins/server/example/: CMakeLists.txt  example_server.cc
plugins/shared/: CMakeLists.txt
plugins/shared/example/: CMakeLists.txt  example_pch.hh  example_shared.cc
plugins/templates/: client_plugins.cc.in  server_plugins.cc.in  shared_plugins.cc.in
render_gl/: CMakeLists.txt  pch.hh  render_gl.cc
render_vk/: CMakeLists.txt  pch.hh  render_vk.cc
